[workspace]
members = [
    "transport",
    "examples/wasm-client",
    "examples/helloworld",
]

[patch.crates-io]
tonic = { git = "https://github.com/boxdot/tonic", rev = "2ed4144" }
tonic-build = { git = "https://github.com/boxdot/tonic", rev = "2ed4144" }
# patched since https://github.com/hyperium/h2/pull/537 is not yet released
h2 = { git = "https://github.com/hyperium/h2", rev = "04570652" }
