[workspace]
members = [
    "transport",
    "examples/wasm-client",
    "examples/helloworld",
]
resolver = "2"

[patch.crates-io]
tonic = { git = "https://github.com/lucasmerlin/tonic", branch = "wasm-client-feature" }
tonic-build = { git = "https://github.com/lucasmerlin/tonic", branch = "wasm-client-feature" }
