[package]
name = "server"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic-ws-transport = { path = "../../transport", features = ["native"] }
tonic = { version = "0.10.2", features = ["transport", "codegen", "prost"] }
prost = "0.12.3"
tokio = { version = "1.1.1", features = ["full"] }
futures-util = "0.3.12"
tokio-tungstenite = "0.20.0"
tokio-stream = { version = "0.1.2", features = ["net"] }

[build-dependencies]
tonic-build = "0.10.2"
