[package]
name = "wasm-client"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic-ws-transport = { path = "../../transport", default-features = false }
tonic = { version = "0.3.1", default-features = false, features = ["client", "codegen", "prost"] }
prost = "0.6.1"
web-sys = "0.3.45"
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
wasm-logger = "0.2.0"
log = "0.4.11"
wasm-bindgen-futures = "0.4.18"
console_error_panic_hook = "0.1.6"

[build-dependencies]
# Note: no "transport" feature => generated client does not have transport dependent code
tonic-build = { version = "0.3.1", default-features = false, features = ["prost", "rustfmt"] }
