[package]
name = "wasm-client"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic-ws-transport = { path = "../../transport", default-features = false }

console_error_panic_hook = "0.1.6"
js-sys = "0.3.45"
log = "0.4.11"
prost = "0.6.1"
serde_json = "1.0.59"
tonic = { version = "0.3.1", default-features = false, features = ["client", "codegen", "prost"] }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
wasm-logger = "0.2.0"
web-sys = "0.3.45"

[build-dependencies]
# Note: no "transport" feature => generated client does not have transport dependent code
tonic-build = { version = "0.3.1", default-features = false, features = ["prost", "rustfmt"] }
