[package]
name = "wasm-client"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic-ws-transport = { path = "../../transport", default-features = false, features = ["web"] }

console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
log = "0.4.14"
prost = "0.12.3"
serde_json = "1.0.61"
tonic = { version = "0.10.2", default-features = false, features = ["client", "codegen", "prost"] }
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
wasm-logger = "0.2.0"
web-sys = "0.3.47"

[build-dependencies]
# Note: no "transport" feature => generated client does not have transport dependent code
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
